namespace sf.systems.rentals.cars
{
    public interface IMessageHandler
    {
        void Log(string message);
        void ShowMessage(string message);
    }
}
